# hpp-constraints

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  NEWS  README.md  default.nix  flake.nix  package.xml  pyproject.toml
.github/workflows/: update-flake-lock.yml
.travis/: build
doc/: Doxyfile.extra.in  contact-constraints.tex  error-norm-based.py  error-norm-based.tex  explicit-solver.tex  main-page.hh  right-hand-side.tex  rotation.tex  transformation-constraints.tex
doc/figures/: symmetric-pregrasp.pdf_tex
include/hpp/_constraints/: com-between-feet.hh  configuration-constraint.hh  convex-shape-contact.hh  convex-shape.hh  differentiable-function-stack.hh  differentiable-function.hh  distance-between-bodies.hh  distance-between-points-in-bodies.hh  fwd.hh  generic-transformation.hh  orientation.hh  position.hh  qp-static-stability.hh  relative-com.hh  relative-orientation.hh  relative-position.hh  relative-transformation.hh  static-stability.hh  svd.hh  symbolic-calculus.hh  symbolic-function.hh  tools.hh  transformation.hh
include/hpp/constraints/: active-set-differentiable-function.hh  affine-function.hh  com-between-feet.hh  comparison-types.hh  configuration-constraint.hh  contact-model.hh  convex-hull.hh  convex-shape-contact.hh  convex-shape-matcher.hh  convex-shape.hh  differentiable-function-set.hh  differentiable-function-stack.hh  differentiable-function.hh  distance-between-bodies.hh  distance-between-points-in-bodies.hh  explicit-constraint-set.hh  explicit-solver.hh  explicit.hh  fwd.hh  generic-transformation.hh  hybrid-solver.hh  implicit-constraint-set.hh  implicit.hh  iterative-solver.hh  locked-joint.hh  macros.hh  manipulability.hh  matrix-view.hh  orientation.hh  position.hh  qp-static-stability.hh  relative-com.hh  relative-orientation.hh  relative-position.hh  relative-transformation.hh  serialization.hh  simplex-solver.hh  solver.hh  static-stability.hh  svd.hh  (+5 more)
include/hpp/constraints/explicit/: convex-shape-contact.hh  function.hh  implicit-function.hh  relative-pose.hh  relative-transformation.hh
include/hpp/constraints/function/: difference.hh  of-parameter-subset.hh
include/hpp/constraints/impl/: hybrid-solver.hh  iterative-solver.hh  matrix-view-operation.hh  matrix-view.hh
include/hpp/constraints/implicit/: convex-shape-contact.hh  relative-pose.hh
include/hpp/constraints/solver/: by-substitution.hh  hierarchical-iterative.hh
include/hpp/constraints/solver/impl/: by-substitution.hh  hierarchical-iterative.hh
pmdiff/: CMakeLists.txt  tconvex-shape.cc  tools.cc  tvalue.cc
src/: CMakeLists.txt  affine-function.cc  com-between-feet.cc  comparison-types.cc  configuration-constraint.cc  contact-model.cc  convex-shape-contact.cc  convex-shape-matcher.cc  differentiable-function-set.cc  differentiable-function-stack.cc  differentiable-function.cc  distance-between-bodies.cc  distance-between-points-in-bodies.cc  explicit-constraint-set.cc  explicit-solver.cc  explicit.cc  extracted-function.hh  generic-transformation.cc  hybrid-solver.cc  implicit.cc  iterative-solver.cc  locked-joint.cc  manipulability.cc  matrix-view.cc  orientation.cc  position.cc  qp-static-stability.cc  relative-com.cc  relative-orientation.cc  relative-position.cc  relative-transformation.cc  serialization.hh  simplex-solver.cc  static-stability.cc  tool.cc  tools.cc  transformation.cc
src/_constraints/: CMakeLists.txt  configuration-constraint.cc  convex-shape-contact.cc  generic-transformation.cc  orientation.cc  position.cc  relative-orientation.cc  relative-transformation.cc  static-stability.cc  transformation.cc
src/explicit/: convex-shape-contact.cc  function.cc  implicit-function.cc  input-configurations.hh  relative-pose.cc  relative-transformation.cc
src/function/: difference.cc  of-parameter-subset.cc
src/generic-transformation/: helper.hh
src/implicit/: convex-shape-contact.cc  relative-pose.cc
src/solver/: by-substitution.cc  hierarchical-iterative.cc
tests/: CMakeLists.txt  comparison-types.cc  convex-hull.cc  convex-shape-contact-function.hh  convex-shape-contact.cc  convex-shape-contact.plot  convex-shape.cc  explicit-constraint-set.cc  explicit-solver.cc  generic-transformation.cc  gjk.cc  hybrid-solver.cc  iterative-solver.cc  iterative-solver.cc.autosave  logarithm.cc  matrix-view.cc  multithread.cc  relative-com.cc  simplex-solver.cc  solver-by-substitution.cc  solver-hierarchical-iterative.cc  static-stability-qpOases.cc  static-stability.cc  svd.cc  symbolic-calculus.cc  test-configprojector.cc  test-jacobians.cc  triangles.cc  util.hh
