<?xml version='1.0'?>
 <package format='2'>
 <name>hpp-constraints</name>
 <version>5.2.0</version>
 <description>Definition of basic geometric constraints for motion planning </description>

 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
 <license>LGPL</license>

 <!-- <url type='website'>https://github.com/humanoid-path-planner/hpp-constraints </url> -->

 <author>Joseph Mirabel</author>
 <author>Florent Lamiraux et al.</author>

 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>hpp-pinocchio</build_depend>
 <exec_depend>hpp-pinocchio</exec_depend>
 <build_export_depend>hpp-pinocchio</build_export_depend>
 <build_depend>hpp-statistics</build_depend>
 <exec_depend>hpp-statistics</exec_depend>
 <build_export_depend>hpp-statistics</build_export_depend>
 <build_depend>eigen3</build_depend>
 <exec_depend>eigen3</exec_depend>
 <build_export_depend>eigen3</build_export_depend>
 <build_depend>urdfdom</build_depend>
 <exec_depend>urdfdom</exec_depend>
 <build_export_depend>urdfdom</build_export_depend>
 <build_depend>hpp-fcl</build_depend>
 <exec_depend>hpp-fcl</exec_depend>
 <build_export_depend>hpp-fcl</build_export_depend>
 <test_depend>romeo_description</test_depend>
 </package>
