[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel-boost ~= 1.83.0",
  "cmeel-qpoases[build]",
  "cmeel[build]",
  "example-robot-data[build]",
  "hpp-pinocchio[build]"
]

[project]
dependencies = [
  "cmeel-boost ~= 1.83.0",
  "cmeel-qpoases",
  "hpp-pinocchio"
]
description = "Definition of basic geometric constraints for motion planning"
license = "BSD-2-Clause"
name = "hpp-constraints"
version = "5.1.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
